# GitTalk-AI

./: CLAUDE.md  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/data/: gta.db
backend/src/: main.py
backend/src/utils/: auth.py  cache.py  chunker.py  db.py  hybrid_search.py  ingest.py  llm.py  memory.py  prompt.py  query_classifier.py  query_enrichment.py  rate_limit.py  reranker.py  session.py  vectorstore.py
backend/tests/: test_utils.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: Chat.tsx  ChatNavbar.tsx  ExampleRepos.tsx  Footer.tsx  MarkdownCode.tsx  Navbar.tsx  NotFound.tsx
frontend/src/components/landing/: FAQSection.tsx  FeaturesSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  PricingSection.tsx  TestimonialsSection.tsx
frontend/src/components/ui/: alert.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx  sonner.tsx  textarea.tsx
frontend/src/context/: AuthContext.tsx  WebSocketContext.tsx
frontend/src/pages/: AuthCallback.tsx  Dashboard.tsx  LandingPage.tsx
